--- a/assets/settings.ini
+++ b/assets/settings.ini
@@ -8,10 +8,10 @@ refresh rate = 60
 brightness = 1.0
 
 fullscreen = false
-console = false
+console = true
 
 [camera]
-free = false
+free = true
 
 [music]
-theme = true
+theme = false
