--- a/Candybreak/Candybreak.vcxproj.filters
+++ b/Candybreak/Candybreak.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Mesh.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Breakout.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Candybreak.cpp">
@@ -57,6 +60,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Mesh.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Breakout.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
