--- a/assets/settings.ini
+++ b/assets/settings.ini
@@ -7,11 +7,11 @@ title = Candybreak
 refresh rate = 60
 brightness = 1.0
 
-fullscreen = false
-console = true
+fullscreen = true
+console = false
 
 [camera]
 free = true
 
 [music]
-theme = false
+theme = true
