--- a/Candybreak/Candybreak.vcxproj
+++ b/Candybreak/Candybreak.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Bricks.h" />
     <ClInclude Include="Forcefield.h" />
     <ClInclude Include="FreeCamera.h" />
+    <ClInclude Include="GodRays.h" />
     <ClInclude Include="Init.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Mesh.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="Forcefield.cpp" />
     <ClCompile Include="FreeCamera.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="GodRays.cpp" />
     <ClCompile Include="Init.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -191,6 +193,8 @@
   <ItemGroup>
     <None Include="..\shader\forcefield.frag" />
     <None Include="..\shader\forcefield.vert" />
+    <None Include="..\shader\godrays.frag" />
+    <None Include="..\shader\godrays.vert" />
     <None Include="..\shader\particle.comp" />
     <None Include="..\shader\particle.frag" />
     <None Include="..\shader\particle.geom" />
