--- a/assets/settings.ini
+++ b/assets/settings.ini
@@ -7,11 +7,8 @@ title = Candybreak
 refresh rate = 60
 brightness = 1.0
 
-fullscreen = true
-console = false
-
-[camera]
-free = true
+fullscreen = false
+console = true
 
 [music]
-theme = true
+theme = false
