--- a/Candybreak/Candybreak.vcxproj.filters
+++ b/Candybreak/Candybreak.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="BrickPositions.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="GodRays.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Candybreak.cpp">
@@ -98,6 +101,9 @@
     <ClCompile Include="Void.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="GodRays.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shader\simple.frag">
@@ -134,6 +140,12 @@
       <Filter>Ressourcendateien</Filter>
     </None>
     <None Include="..\shader\void.vert">
+      <Filter>Ressourcendateien</Filter>
+    </None>
+    <None Include="..\shader\godrays.vert">
+      <Filter>Ressourcendateien</Filter>
+    </None>
+    <None Include="..\shader\godrays.frag">
       <Filter>Ressourcendateien</Filter>
     </None>
   </ItemGroup>
