particle system, lighting balances

--- a/TestProject/TestProject.vcxproj
+++ b/TestProject/TestProject.vcxproj
@@ -170,11 +170,13 @@
     <ClInclude Include="CombineShader.h" />
     <ClInclude Include="DepthShader.h" />
     <ClInclude Include="DirectionalLight.h" />
+    <ClInclude Include="ForcefieldShader.h" />
     <ClInclude Include="FrameBuffer.h" />
     <ClInclude Include="FreeCamera.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="AutomaticCamera.h" />
+    <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="PhongShader.h" />
     <ClInclude Include="LogicEngine.h" />
     <ClInclude Include="Mesh.h" />
@@ -194,12 +196,14 @@
     <ClCompile Include="CombineShader.cpp" />
     <ClCompile Include="DepthShader.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
+    <ClCompile Include="ForcefieldShader.cpp" />
     <ClCompile Include="FrameBuffer.cpp" />
     <ClCompile Include="FreeCamera.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="AutomaticCamera.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="PhongShader.cpp" />
     <ClCompile Include="LogicEngine.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -220,6 +224,10 @@
     <None Include="..\shader\combine.vert" />
     <None Include="..\shader\depth.frag" />
     <None Include="..\shader\depth.vert" />
+    <None Include="..\shader\particle.comp" />
+    <None Include="..\shader\particle.frag" />
+    <None Include="..\shader\particle.geom" />
+    <None Include="..\shader\particle.vert" />
     <None Include="..\shader\phong.frag" />
     <None Include="..\shader\phong.vert" />
     <None Include="..\shader\skybox.frag" />
