funny camera and bricks stuff, moving light source

--- a/assets/settings.ini
+++ b/assets/settings.ini
@@ -8,7 +8,7 @@ fullscreen = true
 console = true
 
 [camera]
-mode = free ; free or auto
+mode = auto ; free or auto
 
 [music]
-theme = true
+theme = false
