--- a/assets/settings.ini
+++ b/assets/settings.ini
@@ -5,10 +5,10 @@ height = 768
 title = Candybreak
 
 fullscreen = true
-console = true
+console = false
 
 [camera]
 mode = free ; free or auto
 
 [music]
-theme = false
+theme = true
