--- a/assets/settings.ini
+++ b/assets/settings.ini
@@ -4,11 +4,11 @@ height = 768
 
 title = Candybreak
 
-fullscreen = true
-console = false
+fullscreen = false
+console = true
 
 [camera]
-mode = free ; free or auto
+mode = auto ; free or auto
 
 [music]
 theme = false
