--- a/assets/settings.ini
+++ b/assets/settings.ini
@@ -1,6 +1,6 @@
 [window]
-width = 1280
-height = 768
+width = 1920	
+height = 1080
 
 title = Candybreak
 
@@ -8,7 +8,7 @@ fullscreen = false
 console = true
 
 [camera]
-mode = free ; free or auto
+mode = auto ; free or auto
 
 [music]
 theme = true
